Last commit for this project. Fixed header image spacing on services page for tablet view

--- a/css/index.css
+++ b/css/index.css
@@ -453,6 +453,12 @@ footer {
 	margin-bottom: 40px;
 }
 
+@media ( max-width: 800px ) {
+    .services-header-img {
+        margin-top: 10%;
+    }
+}
+
 @media ( max-width: 500px) {
     .services-header-img {
         display: none;
@@ -505,6 +511,9 @@ footer {
 }
 
 @media ( max-width: 500px ) {
+    body {
+        width: 100%;
+    }
     .services-content {
         width: 90%;
         flex-direction: column;
